app/frontend/assets/styles/components/_modal.scss
@mixin bodyModal {
    overflow: hidden;
    padding-right: 0;
}

@mixin modalVisible {
    opacity: 1;
    visibility: visible;
    backdrop-filter: blur(10px);

    &.modal-right {
        .modal-content {
            right: 0;
        }
    }

    .modal-backdrop {
        display: block;
        opacity: 0.5;
    }
}

body.show-modal {
    @include bodyModal();

    .modal.show {
        @include modalVisible();
    }
}

body.show-modal--first-filter {
    .modal--first-filter {
        @include modalVisible();
    }
}

.modal {
    position: fixed;
    width: 100%;
    height: 100%;
    opacity: 0;
    visibility: hidden;
    transition: all 0.5s ease;
    top: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: auto;
    z-index: 2100;

    .turboframe-container {
        align-items: center;
        height: 97vh;
        overflow-y: auto;
    }

    &-dialog {
        display: flex;
        align-items: center;
        min-height: calc(100% - 3rem);
        position: relative;
        width: 90%;
        max-width: map-get($container-max-widths, lg);
        margin: 1.5rem auto;

        &--small {
            max-width: map-get($container-max-widths, md);
        }
        &--wide {
            max-width: map-get($container-max-widths, xxxl);
        }
    }

    &-content {
        background: $blue-100;
        position: relative;
        display: flex;
        flex-direction: column;
        width: 100%;
        min-height: 100%;
        z-index: 20;
    }

    &-header {
        position: relative;
        padding-left: $container-padding-x;
        padding: 0 $container-padding-x 4px;

        h1 {
            padding: 25px 48px 0 0;
            margin: 0 0 1rem;
            font-size: calc(1.25rem + 1.5vw);

            small {
                display: block;
                font-weight: 400;
                font-size: 0.888rem;
                margin-top: 0.5rem;
            }
        }

        .btn-close {
            &:focus {
                outline-width: thin !important;
            }
        }

        &.border-bottom {
            border-color: $blue-200;
        }
    }

    &-footer {
    }

    &-body {
        padding: 0 $container-padding-x $container-padding-x;
    }

    &-footer {
        display: flex;
        flex-wrap: wrap;
        flex-shrink: 0;
        align-items: center;
        justify-content: flex-end;
        padding: $alert-padding-x;
    }

    &-backdrop {
        position: fixed;
        top: 0;
        left: 0;
        z-index: 10;
        width: 100vw;
        height: 100vh;
        background-color: $black;
        opacity: 0;
        display: none;
    }

    &--images {
        .modal-dialog {
            max-width: none;
            width: 98%;
            height: 98%;
            margin: 0.5% auto;

            .modal-header {
                padding: 0;
                z-index: 10;
            }

            .modal-body {
                padding: 1% 1% 40px;
            }

            .modal-content,
            .modal-body,
            ul,
            li,
            .image {
                height: 100%;
            }

            .image {
                width: 100%;
                height: 100%;
                max-width: 100%;
                max-height: 100%;
                background-size: contain;
                background-position: 50% 50%;
                background-repeat: no-repeat;
                background-color: $gray-tint02;
                cursor: zoom-in;

                &.fullSize {
                    background-size: cover;
                    cursor: zoom-out;
                }
            }

            .image-counter {
                line-height: 40px;
            }
        }

        .container__navigate-images {
            .navigate-images--left,
            .navigate-images--right {
                cursor: pointer;
                position: absolute;
                width: 80px;
                height: 80px;
                position: absolute;
                top: 50%;
                transform: translateY(-50%);

                opacity: 1;
                transition: opacity $transition-duration-default ease-in;

                span {
                    display: block;

                    background-color: $black;

                    svg {
                        width: 64px;
                        height: 64px;
                        margin: 8px;
                        path {
                            fill: $white;
                        }
                    }
                }

                &.inactive {
                    opacity: 0;
                    pointer-events: none;
                }
            }
            .navigate-images--left {
                left: 0;
                span {
                    svg {
                        transform: rotate(180deg);
                    }
                }
            }

            .navigate-images--right {
                right: 0;
            }
        }
    }
}

.show-modal .modal--multistep-form {
    .modal-content {
        height: 66vh;

        .modal-header,
        .modal-footer {
            flex: 0 1 auto;
        }

        .modal-header {
            padding: 0 2rem;
        }
        .modal-body {
            flex: 1 1 auto;
            overflow-y: auto;
            scroll-behavior: smooth;
            padding: 0 2rem;
        }
        .modal-footer {
            padding: 1.15rem 2rem;
        }
    }

    .stap1 div.stap1,
    .stap2 div.stap2 {
        transition: all $transition-duration-default $transition-ease-default;
        opacity: 1;
        visibility: visible;
        display: block;
        transition-behavior: allow-discrete;
        transition-delay: $transition-duration-default;

        @starting-style {
            opacity: 0;
        }
    }

    .stap1 {
        .stap2 {
            opacity: 0;
            // transition: all $transition-duration-default $transition-ease-default;
            visibility: hidden;
            display: none;
            transition-behavior: allow-discrete;
            @starting-style {
                opacity: 1;
            }
        }
    }

    .stap2 {
        .stap1 {
            opacity: 0;
            // transition: all $transition-duration-default $transition-ease-default;
            visibility: hidden;
            display: none;
            transition-behavior: allow-discrete;
            @starting-style {
                opacity: 1;
            }
        }
    }

    .modal-footer {
        align-items: normal;
        justify-content: space-between;
        padding: 1rem;
    }
    .btn-row {
        display: flex;
        flex: 1;
        justify-content: space-between;

        .btn {
            width: auto;
            font-size: 0.889rem;
            margin-bottom: 0;

            &-textlink {
                color: $black;
            }
        }
    }
}

